[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image_cloud"
version = "2025.0.1"
authors = [
    { name = "Larry Page", email = "lawrence.page@live.com" },
]
description = "Creation of a collage of images scaled based on relative weights."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT License" }
dependencies = [ 
    "pillow>=11.1.0",
    "numpy>=2.2.1",
    "matplotlib>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/lpage30/image_cloud"

[project.scripts]
imagecloud_cli = "imagecloud_clis.imagecloud_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

